--- a/MySQL/MySQLBasics.html
+++ b/MySQL/MySQLBasics.html
@@ -126,8 +126,15 @@
                 <a href="MySQLBasics/Joins.html">Joins</a>
                 <p class="small_desc">Learn various MySQL join clauses in the <code>SELECT</code> statement to query data from two or more tables.</p>
                 <ol class="chapter_items">
-                    <li>Column Aliases.</li>
-                    <li>Table Aliases.</li>
+                    <li>Joins.</li>
+                    <li>Setting up sample tables.</li>
+                    <li>MySQL INNER JOIN clause.</li>
+                    <li>USING clause.</li>
+                    <li>MySQL LEFT JOIN clause.</li>
+                    <li>Example 1 : Select rows that only exist in the left table.</li>
+                    <li>MySQL RIGHT JOIN clause.</li>
+                    <li>Example 2 : Select data that exists only in the right table.</li>
+                    <li>MySQL CROSS JOIN clause.</li>
                 </ol>
             </li>
         </ol>
