--- a/Node.js/TOC.html
+++ b/Node.js/TOC.html
@@ -1,45 +1,46 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Basics - TOC</title>
+	<title>MySQL - Table of Content</title>
+    <link rel="icon" type="image/x-icon" href="../Assets/favicon.png">
+	    <link rel="icon" type="image/x-icon" href="../Assets/favicon.png">
 	<link rel="stylesheet" type="text/css" href="../Assets/bulma.css">
 	<link rel="stylesheet" type="text/css" href="../Assets/Style.css">
-	<script src="../../Assets/prism.min.js"></script>
-	<script type="text/javascript" src="../Assets/jquery.min.js"></script>
-	<link rel="stylesheet" href="../Assets/prism-dark.css">
-	<style type="text/css">
-		.Content{
-			display: flex;
-			flex-flow: row wrap;
-		}
-		.Content a{
-			margin: 5px;
-			padding: 5px;
-			border: 1px solid #ccc;
-		}
-		.Content{
-			padding: 0 !important;
-		}
-		h1{
-			font-size: 16px;
-			margin: 0;
-		}
-	</style>
 </head>
 <body class="Body">
-
-	<div class="Card">
-		<h1><a href="Basics/TOC.html">Basics</a></h1>
-		<div class="Content">
-			Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+	<div class="card table_of_content">
+		<h1>NodeJS - Table of Content</h1>
+		<div>
+			<ol>
+				<li>
+					<a href="GetStarted.html">Get Started</a>
+					<ul class="chapter_items">
+						<li>Install</li>
+						<li>Get Version</li>
+						<li>How to run Node.js Code</li>
+						<li>REPL (Read-Eval-Print Loop)</li>
+						<li>Eval (-e) Option</li>
+						<li>Launching Node Code from a File</li>
+						<li>Global Objects: global</li>
+						<li>GLOBAL</li>
+					</ul>
+				</li>
+				<li>
+					<a href="RequireAndExport.html">Require And Export</a>
+					<ul class="chapter_items">
+						<li>Install</li>
+						<li>Get Version</li>
+						<li>How to run Node.js Code</li>
+						<li>REPL (Read-Eval-Print Loop)</li>
+						<li>Eval (-e) Option</li>
+						<li>Launching Node Code from a File</li>
+						<li>Global Objects: global</li>
+						<li>GLOBAL</li>
+					</ul>
+				</li>
+			</ol>
 		</div>
-	</div>	
 
-
+	</div>
 </body>
 </html>
