--- a/Go/Setup.html
+++ b/Go/Setup.html
@@ -1,35 +1,40 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Go</title>
+	<title>Go - Setup Go and Test</title>
+    <link rel="icon" type="image/x-icon" href="../Assets/favicon.png">
 	<link rel="stylesheet" type="text/css" href="../Assets/bulma.css">
 	<link rel="stylesheet" type="text/css" href="../Assets/Style.css">
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.8.4/prism.min.js"></script>
-	<script type="text/javascript" src="../Assets/jquery.min.js"></script>
-	<link rel="stylesheet" href="../Assets/prism-dark.css">
 </head>
-<body class="Body">
-<div class="Content Card">
+<body>
+<div class="page card">
 
 
 
+<h1>Setup Go on Windows</h1>
+<p>Go to the page <a href="https://go.dev/doc/install">https://go.dev/doc/install</a> and follow the instruction to install the Golang toolchain. It is a one click installation file.</p>
 
-<h1>Setup Go</h1>
+<h1>Setup Go on Linux</h1>
 <p>Download the setup file from the official page. Then run the following command:</p>
 <pre>
 sudo tar -C /usr/local -xzf go$VERSION.$OS-$ARCH.tar.gz
 </pre>
 <p>It will unpack and extract the file and create a new folder <code>go</code> under <code>/usr/local</code> directory.</p>
-
-
-<h1>Add Go binary to your path</h1>
+<h3>Add Go binary to your path</h3>
 <p>To work with Go, you need to add path to the environment variable. Run the following command:</p>
 <pre>
 export PATH=$PATH:/usr/local/go/bin
 </pre>
 
-
-<h1>Testing a File</h1>
+<h1>Check Version</h1>
+<p>Run the following command to get the golang version:</p>
+<pre>
+C:\Users\NeoRe>go version
+go version go1.23.2 windows/amd64
+</pre>
+	
+	
+<h1>Run a File: Hello World</h1>
 <p>Create a directory called <code>GoPlayground</code> and change your directory to the newly created directory</p>
 <pre>
 mkdir GoPlayground
@@ -51,17 +56,17 @@ go build demo.go
 </pre>
 <p>The command above will build an executable named demo in the current directory alongside your source code. Execute it to see the greeting:</p>
 <pre>
+// For Linux
 ./demo
+
+// For Windows
+.\demo
 </pre>
 <p>It will produce the following output:</p>
 <pre>
 hello, world
 </pre>
-
-
-
-
-
+		
 
 
 
