--- a/Go/TOC.html
+++ b/Go/TOC.html
@@ -1,60 +1,63 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Go</title>
+	<title>GO - Table of Content</title>
+    <link rel="icon" type="image/x-icon" href="../Assets/favicon.png">
+	    <link rel="icon" type="image/x-icon" href="../Assets/favicon.png">
 	<link rel="stylesheet" type="text/css" href="../Assets/bulma.css">
 	<link rel="stylesheet" type="text/css" href="../Assets/Style.css">
-	<script src="../Assets/prism.min.js"></script>
-	<script type="text/javascript" src="../Assets/jquery.min.js"></script>
-	<link rel="stylesheet" href="../Assets/prism-dark.css">
-	<style type="text/css">
-		.Content{
-			display: flex;
-			flex-flow: row wrap;
-		}
-		.Content a{
-			margin: 5px;
-			padding: 5px;
-			border: 1px solid #ccc;
-		}
-		.Content{
-			padding: 0 !important;
-		}
-		h1{
-			font-size: 16px;
-			margin: 0;
-		}
-	</style>
 </head>
 <body class="Body">
-
-	<div class="Card">
-		<h1>Setup</h1>
-		<div class="Content">
-			<a href="Setup.html">Setup</a>
+	<div class="card table_of_content">
+		<h1>GO - Table of Content</h1>
+		<div>
+			<ol>
+				<li>
+					<a href="Setup.html">Setup</a>
+					<ul class="chapter_items">
+						<li>Setup Go on Windows</li>
+						<li>Setup Go on Linux</li>
+						<li>Check Version</li>
+						<li>Run a File: Hello World</li>
+					</ul>
+				</li>
+				<li>
+					<a href="Packages.html">Packages</a>
+					<ul class="chapter_items">
+						<li>Package: main</li>
+						<li>Importing Packages</li>
+						<li>Exported Vs Unexported names</li>
+					</ul>
+				</li>
+				<li>
+					<a href="Variables.html">Variables</a>
+					<ul class="chapter_items">
+						<li>Variables</li>
+						<li>Data Type of Variable</li>
+						<li>Variables with initializers</li>
+						<li>Short variable declarations</li>
+						<li>Zero Values</li>
+						<li>How to print data type of a variable?</li>
+					</ul>
+				</li>
+				<li>
+					<a href="Function.html">Function</a>
+					<ul class="chapter_items">
+						<li>Function</li>
+						<li>Declaring and calling functions</li>
+						<li>Specifying Return Type</li>
+						<li>Parameters of Function</li>
+						<li>Returning Multiple Values</li>
+						<li>Named Return</li>
+						<li>Anonymous functions</li>
+						<li>Immediate invocation of a function</li>
+						<li>Returning functions from function</li>
+						<li>User-defined function types</li>
+						<li>Recursion Functions</li>
+					</ul>
+				</li>
+			</ol>
 		</div>
 	</div>
-
-	<div class="Card">
-		<h1>Packages</h1>
-		<div class="Content">
-			<a href="Packages.html">Packages</a>
-		</div>
-	</div>
-
-	<div class="Card">
-		<h1>Variables</h1>
-		<div class="Content">
-			<a href="Variables.html">Variables</a>
-		</div>
-	</div>
-
-	<div class="Card">
-		<h1>Function</h1>
-		<div class="Content">
-			<a href="Function.html">Function</a>
-		</div>
-	</div>
-
 </body>
 </html>
