--- a/Go/Function.html
+++ b/Go/Function.html
@@ -1,34 +1,78 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Function</title>
+	<title>Go - Function</title>
+    <link rel="icon" type="image/x-icon" href="../Assets/favicon.png">
 	<link rel="stylesheet" type="text/css" href="../Assets/bulma.css">
 	<link rel="stylesheet" type="text/css" href="../Assets/Style.css">
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.8.4/prism.min.js"></script>
-	<script type="text/javascript" src="../Assets/jquery.min.js"></script>
-	<link rel="stylesheet" href="../Assets/prism-dark.css">
 </head>
-<body class="Body">
-<div class="Content Card">
-
-
-
+<body>
+<div class="page card">
 
 <h1>Function</h1>
+<p>Functions are essential in any programming language. They help structure the code and make routine tasks easier to do. Go has support for <code>First Class Functions</code> which means functions in Go can be assigned to variables, passed as an argument and can be returned from another function.</p>
 
-<h3>Parameters of Function</h3>
-<p>A function can take zero or more arguments. In this example, add takes two parameters of type <code>int</code>. Notice that the type comes after the variable name.</p>
+
+<h1>Declaring and calling functions</h1>
+<p>To declare a function we use the func keyword. The general structure of a function declaration is shown below.</p>
+<pre>
+func nameOfFunction(arguments) (returnTypes) {
+    // body
+}
+</pre>
+<p>Let's write a function that prints “Hello World!” in the console.</p>
+<pre>
+package main
+
+import (
+	"fmt"
+)
+	
+func main() {
+	// call function
+	helloWorld();
+}
+
+// declare the function
+func helloWorld() {
+	fmt.Println("Hello World!")  // prints "Hello World!" 
+}
+</pre>
+<p>As you can see, calling a function is really easy.</p>
+
+
+
+
+<h1>Specifying Return Type</h1>
+<p>To specify the return type use the type just before the function body:</p>
+<pre>
+func add(x int, y int) int {
+	return x + y;
+}
+</pre>
+<p>Here before the second bracket of the function body we have <code>int</code>, means the function will return a value which is integer type.</p>
+<p>To return multiple values seperate the type with a comma and enclose them within parenthesis.</p>
+<pre>
+func swap(x, y string) (string, string) {
+	return y, x;
+}
+</pre>
+<p>In the above function the return type is <code>(string, string)</code>, means the function will return two values and their types are string.</p>
+
+
+<h1>Parameters of Function</h1>
+<p>A function can take zero or more arguments. In this example, the function <code>add</code> takes two parameters of type <code>int</code>. Notice that the type comes after the variable name.</p>
 <pre>
 package main
 
 import "fmt"
 
 func add(x int, y int) int {
-	return x + y
+	return x + y;
 }
 
 func main() {
-	fmt.Println(add(42, 13))
+	fmt.Println(add(42, 13));
 }
 </pre>
 <p>When two or more consecutive named function parameters share a type, you can omit the type from all but the last. In this example, we shortened</p>
@@ -55,7 +99,10 @@ func main() {
 </pre>
 
 
-<h3>Returning Multiple Values</h3>
+
+
+	
+<h1>Returning Multiple Values</h1>
 <p>A function can return any number of results. Seperate the values with a comma. In the following example, the <code>swap</code> function returns two values:</p>
 <pre>
 package main
@@ -63,36 +110,22 @@ package main
 import "fmt"
 
 func swap(x, y string) (string, string) {
-	return y, x
+	return y, x;
 }
 
 func main() {
-	a, b := swap("hello", "world")
-	fmt.Println(a, b)
+	a, b := swap("hello", "world");
+	fmt.Println(a, b);
 }
 </pre>
+	
+	
+	
+	
 
-
-
-
-<h3>Specifying Return Type</h3>
-<p>To specify the return type use the type just before the function body:</p>
-<pre>
-func add(x int, y int) int {
-	return x + y
-}
-</pre>
-<p>Here before the second bracket of the function body we have <code>int</code>, means the function will return a value which is integer type.</p>
-<p>To return multiple values seperate the type with a comma and enclose them within parenthesis.</p>
-<pre>
-func swap(x, y string) (string, string) {
-	return y, x
-}
-</pre>
-<p>In the above function the return type is <code>(string, string)</code>, means the function will return two values and their types are string.</p>
-
-
-<h3>Named Return</h3>
+	
+	
+<h1>Named Return</h1>
 <p>Go's return values may be named. If so, they are treated as variables defined at the top of the function. These names should be used to document the meaning of the return values.</p>
 <p>A <code>return</code> statement without arguments returns the named return values. This is known as a "<code>naked</code>" return. Naked return statements should be used only in short functions, as with the example shown here. They can harm readability in longer functions.</p>
 <pre>
@@ -118,12 +151,169 @@ func main() {
 <pre>
 7 10
 </pre>
+	
+
+
+
+<h1>Anonymous functions</h1>
+<p>Since Go supports First Class Functions, that means you can assign a function to a variable or even invoke it immediately. Below is an example code.</p>
+<pre>
+package main
+
+import (
+	"fmt"
+)
+
+func main() {
+	getMod := func(a, b int) (int) {
+		return a%b;
+	};
+	fmt.Println(getMod(12, 5)); // 2
+}
+</pre>
+
+
+
+
+<h1>Immediate invocation of a function</h1>
+<p>In the below code an anonymous function is immediately invoked.</p>
+<pre>
+package main
+
+import (
+	"fmt"
+)
+	
+func main() {
+	func(name string) {
+		fmt.Printf("Hello, %s", name);
+	}("John");   // prints "Hello, John"
+}
+</pre>
 
 
 
 
 
 
+<h1>Returning functions from function</h1>
+<p>A function can return another function as well. Here is how to do that.</p>
+<pre>
+package main
+
+import (
+	"fmt"
+)
+	
+func main() {
+	f := getFunction("John") // returns a function
+	f();                     // prints "Hello, John"
+}
+	
+func getFunction(name string) func() {
+	return func() {
+		fmt.Printf("Hello, %s", name)
+	}
+}
+</pre>
+<p>In the above example, we have declared return type as function <code>func()</code>.</p>
+
+
+<h1>User-defined function types</h1>
+<p>User-defined function types are types that can be identified as a function. Below is an example.</p>
+<pre>
+package main
+
+import (
+	"fmt"
+)
+	
+type First func(int) int     // declare type
+	
+func getFunction() First {   // use it
+	return func(val int) int {
+		return val * 5
+	} 
+}
+	
+func main() {
+	f := getFunction()  // returns a function of type First
+	fmt.Println(f(12))
+}
+</pre>
+
+
+
+
+<h1>Recursion Functions</h1>
+<p>Go accepts recursion functions. A function is recursive if it calls itself and reaches a stop condition.</p>
+<p>In the following example, <code>testcount()</code> is a function that calls itself. We use the <code>x</code> variable as the data, which increments with <code>1</code> (<code>x + 1</code>) every time we recurse. The recursion ends when the x variable equals to <code>11</code> (<code>x == 11</code>).</p>
+<pre>
+package main
+import ("fmt")
+
+func testcount(x int) int {
+	if x == 11 {
+	return 0
+	}
+	fmt.Println(x)
+	return testcount(x + 1)
+}
+
+func main(){
+	testcount(1)
+}
+</pre>
+<p>Output:</p>
+<pre>
+1
+2
+3
+4
+5
+6
+7
+8
+9
+10
+</pre>
+<p>Recursion is a common mathematical and programming concept. This has the benefit of meaning that you can loop through data to reach a result.</p>
+<p>The developer should be careful with recursion functions as it can be quite easy to slip into writing a function which never terminates, or one that uses excess amounts of memory or processor power. However, when written correctly recursion can be a very efficient and mathematically-elegant approach to programming.</p>
+<p>In the following example, <code>factorial_recursion()</code> is a function that calls itself. We use the <code>x</code> variable as the data, which decrements (<code>-1</code>) every time we recurse. The recursion ends when the condition is not greater than <code>0</code> (i.e. when it is 0).</p>
+<pre>
+package main
+import ("fmt")
+
+func factorial_recursion(x float64) (y float64) {
+	if x > 0 {
+		y = x * factorial_recursion(x-1)
+	} else {
+		y = 1
+	}
+	return
+}
+
+func main() {
+	fmt.Println(factorial_recursion(4))
+}
+</pre>
+<p>Output:</p>
+<pre>
+24
+</pre>
+
+
+
+
+
+
+
+
+
+
+
+
+		
 
 
 
