--- a/Go/TOC.html
+++ b/Go/TOC.html
@@ -13,12 +13,69 @@
 		<div>
 			<ol>
 				<li>
-					<a href="Setup.html">Setup</a>
+					<a href="Introduction.html">Introduction</a>
+					<ul class="chapter_items">
+						<li>What is Go?</li>
+						<li>What is Go Used For?</li>
+						<li>Why Use Go?</li>
+					</ul>
+				</li>
+				<li>
+					<a href="Setup.html">Setup Go and Execute a Program</a>
 					<ul class="chapter_items">
 						<li>Setup Go on Windows</li>
 						<li>Setup Go on Linux</li>
 						<li>Check Version</li>
 						<li>Run a File: Hello World</li>
+						<li>Go Syntax: Structure of a GO file</li>
+						<li>Go Comments</li>
+					</ul>
+				</li>
+				<li>
+					<a href="Variables.html">Variables and Constants</a>
+					<ul class="chapter_items">
+						<li>Variables</li>
+						<li>Data Type of Variable</li>
+						<li>Variables with initializers</li>
+						<li>Short variable declarations</li>
+						<li>Zero Values</li>
+						<li>How to print data type of a variable?</li>
+						<li>Go Variable Declaration in a Block</li>
+						<li>Constants</li>
+					</ul>
+				</li>
+				<li>
+					<a href="Output.html">Output Functions</a>
+					<ul class="chapter_items">
+						<li>Go Output Functions</li>
+						<li>The Print() Function</li>
+						<li>The Println() Function</li>
+						<li>The Printf() Function</li>
+						<li>Formatting Verbs for Printf()</li>
+						<li>General Formatting Verbs</li>
+						<li>Integer Formatting Verbs</li>
+						<li>String Formatting Verbs</li>
+						<li>Boolean Formatting Verbs</li>
+						<li>Float Formatting Verbs</li>
+					</ul>
+				</li>
+				<li>
+					<a href="DataType.html">DataType</a>
+					<ul class="chapter_items">
+						<li>Boolean Data Type</li>
+						<li>Integer Data Types</li>
+						<li>Signed Integers</li>
+						<li>Unsigned Integers</li>
+						<li>Float Data Types</li>
+						<li>The float32 Keyword</li>
+						<li>The float64 Keyword</li>
+						<li>String Data Type</li>
+					</ul>
+				</li>
+				<li>
+					<a href="Arrays.html">Arrays</a>
+					<ul class="chapter_items">
+						<li>Arrays</li>
 					</ul>
 				</li>
 				<li>
@@ -29,17 +86,7 @@
 						<li>Exported Vs Unexported names</li>
 					</ul>
 				</li>
-				<li>
-					<a href="Variables.html">Variables</a>
-					<ul class="chapter_items">
-						<li>Variables</li>
-						<li>Data Type of Variable</li>
-						<li>Variables with initializers</li>
-						<li>Short variable declarations</li>
-						<li>Zero Values</li>
-						<li>How to print data type of a variable?</li>
-					</ul>
-				</li>
+				
 				<li>
 					<a href="Function.html">Function</a>
 					<ul class="chapter_items">
